--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,17 +15,18 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-#[program:php-fpm]
-#command=php-fpm
-#user=root
-#autostart=true
-#autorestart=true
-#stdout_logfile=/dev/stdout
-#stdout_logfile_maxbytes=0
-#stderr_logfile=/dev/stderr
-#stderr_logfile_maxbytes=0
+# Comentando o PHP-FPM pois vamos usar o servidor embutido
+# [program:php-fpm]
+# command=php-fpm
+# user=root
+# autostart=true
+# autorestart=true
+# stdout_logfile=/dev/stdout
+# stdout_logfile_maxbytes=0
+# stderr_logfile=/dev/stderr
+# stderr_logfile_maxbytes=0
 
-# Opcional: se você quiser usar o servidor PHP incorporado em vez de PHP-FPM + Nginx
+# Usando o servidor PHP incorporado
 [program:php-server]
 command=php artisan serve --host=0.0.0.0 --port=80
 user=www-data
