--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ pidfile=/var/run/supervisord.pid
 
 [program:laravel-setup]
 command=/usr/local/bin/docker-entrypoint.sh
-user=www-data
+user=root
 autostart=true
 autorestart=false
 startretries=0
@@ -15,21 +15,10 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-# Comentando o PHP-FPM pois vamos usar o servidor embutido
-# [program:php-fpm]
-# command=php-fpm
-# user=root
-# autostart=true
-# autorestart=true
-# stdout_logfile=/dev/stdout
-# stdout_logfile_maxbytes=0
-# stderr_logfile=/dev/stderr
-# stderr_logfile_maxbytes=0
-
 # Usando o servidor PHP incorporado
 [program:php-server]
 command=php artisan serve --host=0.0.0.0 --port=80
-user=www-data
+user=root
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
